--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,144 @@
-.wrapper{
-    width: 100%; height: max-content; display: flex;
+.wrapper {
+    height: max-content;
+    display: flex;
 }
 
-.product-form{
-    width: 70%; justify-content: center; border:  2px solid black;
+.product-form {
+    width: 100%;
+    background-color: #f1f5f9;
 }
 
-.main{
+.nav {
     background-color: #315ba9;
+}
+
+.main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.wrapper {
+    width: 60%;
+    align-items: center;
+    
+}
+
+.nav ul {
+    list-style: none;
+    display: flex;
+    padding: 20px 20px 20px 0;
+}
+.nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 30px 30px 30px 0;
+    font-size: 20px;
+}
+
+.header-text {
+    color: #315ba9;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.content-wrapper {
+    width: 100%;
+    
+}
+
+.card-wrapper {
+    display: grid;
+    grid-template-rows: repeat(4, ifr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+}
+
+.product-card {
+    background-color: white;
+    padding: 20px;
+    border: 2px solid #315ba9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+
+.btn {
+    padding: 20px;
+}
+
+.btn a {
+    text-decoration: none;
+    color: white;
+    background-color: #315ba9;
+    padding: 10px 20px 10px 20px;
+    border-radius: 5px;
+    font-size: 15px;
+}
+
+.submit{
+    color: white;
+    background-color: #315ba9;
+    padding: 10px 20px 10px 20px;
+    border-radius: 5px;
+    font-size: 15px;
+    
+}
+
+.product-name{
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.product-price{
+    font-weight: bold;
+}
+
+.info-text{
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.btn-group{
+    display: flex;
+}
+
+.form{
+    border: 2px solid #315ba9;
+    padding: 40px 20px 40px 20px ;
+}
+
+.label{
+    font-size: 18px;
+    display: block;
+    padding: 10px 10px 10px 0;
+}
+
+.input{
+    border: 1px solid #315ba9;
+    width: 250px;
+    height: 30px;
+    padding: 10px;
+}
+
+.errormsg{
+    color: red;
+    padding: 5px 5px 5px 0;
+}
+
+.space{
+    margin-top: 40px;
+}
+
+.top-space{
+    margin-top: 10px;
+}
+
+.center{
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
